--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,10 @@ description: oknyang's blog
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
 # *** If you're not sure what this mean, then leave this section as it is. Only modify the url and baseurl if you know what you're doing!***
 
+remote_theme : daattali/beautiful-jekyll
+
 # url is the the website domain URL without a trailing slash
-#url: "https://example.com"
+url: "https://oknyang.github.io"
 
 # baseurl should be an empty string
 #baseurl: ""
