--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@
 # in the templates via {{ site.myvariable }}.
 # theme: jekyll-theme-so-simple
 remote_theme: mmistakes/so-simple-theme
-locale: en-US
-title: "My Awesome Site"
-description: "It really is the best."
+locale: euc-KR
+title: "Oknyang's blog"
+description: "oknyang's blog"
 baseurl: # the subpath of your site, e.g. "/blog"
 url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 logo: # path of site logo, e.g. "/images/logo.png"
@@ -87,10 +87,10 @@ defaults:
 
 # Site Author
 author:
-  name:
+  name: oknyang
   picture:
-  email:
-  twitter:
+  email: asainsat62@gmail.com
+#  twitter:
   links:
     - title:
       url:
