--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@
 remote_theme: mmistakes/so-simple-theme
 locale: euc-KR
 title: "Oknyang's blog"
-description: "oknyang's blog"
+description: ""
 baseurl: # the subpath of your site, e.g. "/blog"
 url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 logo: # path of site logo, e.g. "/images/logo.png"
